--- a/Philips.NxGen.Common.props
+++ b/Philips.NxGen.Common.props
@@ -1,15 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project>
   <ItemGroup>
-    <PackageReference Update="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" Version="3.6.0"/>
-    <PackageReference Update="NUnit" Version="3.10.1"/>
-    <PackageReference Update="Procdump" Version="0.0.1"/>
-    <PackageReference Update="RhinoMocks" Version="3.6.1"/>
-    <PackageReference Update="Unity" Version = "4.0.1" />
-    <PackageReference Update="platformDlls" Version="2120.0.0-MLD" />
+    <PackageReference Update="AsyncIO" Version="0.1.69" />
+    <PackageReference Update="Castle.Core" Version="3.3.0" />
     <PackageReference Update="CommonServiceLocator" Version="1.3.0" />
-    <PackageReference Update="Prism.Core" Version="6.3.0" />
-    <PackageReference Update="Prism.Wpf" Version="6.3.0" />
+    <PackageReference Update="EntityFramework" Version="6.2.0" />
     <PackageReference Update="FluentAssertions" Version="5.10.3" />
+    <PackageReference Update="LargeAddressAware" Version="1.0.5" />
+    <PackageReference Update="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" Version="3.6.0" />
+    <PackageReference Update="MRLogging" Version="20190111.0.0" />
+    <PackageReference Update="NetMQ" Version="4.0.0.207" />
+    <PackageReference Update="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Update="NUnit" Version="3.10.1" />
+    <PackageReference Update="NUnit.Console" Version="3.8.0" />
+    <PackageReference Update="NUnit.ConsoleRunner" Version="3.8.0" />
+    <PackageReference Update="NUnit.Extension.NUnitProjectLoader" Version="3.5.0" />
+    <PackageReference Update="NUnit.Extension.NUnitV2Driver" Version="3.6.0" />
+    <PackageReference Update="NUnit.Extension.NUnitV2ResultWriter" Version="3.5.0" />
+    <PackageReference Update="NUnit.Extension.TeamCityEventListener" Version="1.0.3" />
+    <PackageReference Update="NUnit.Extension.VSProjectLoader" Version="3.7.0" />
+    <PackageReference Update="NUnit3TestAdapter" Version="3.10.0" />
+    <PackageReference Update="platformDlls" Version="2120.0.0-MLD" />
+    <PackageReference Update="Prism.Core" Version="6.3.0" />
+    <PackageReference Update="Prism.Unity" Version="6.3.0" />
+    <PackageReference Update="Prism.Wpf" Version="6.3.0" />
+    <PackageReference Update="Procdump" Version="0.0.1" />
+    <PackageReference Update="RhinoMocks" Version="3.6.1" />
+    <PackageReference Update="SpecFlow" Version="2.3.2" />
+    <PackageReference Update="SpecFlow.NUnit" Version="2.3.2" />
+    <PackageReference Update="SpecRun.Runner" Version="1.7.2" />
+    <PackageReference Update="SpecRun.SpecFlow" Version="1.7.2" />
+    <PackageReference Update="SpecRun.SpecFlow.2-3-0" Version="1.7.2" />
+    <PackageReference Update="System.ValueTuple" Version="4.3.0" />
+    <PackageReference Update="TestStack.White" Version="0.13.3" />
+    <PackageReference Update="Unity" Version="4.0.1" />
+    <PackageReference Update="XmlTransformer" Version="1.1.0.4" />
+    <PackageReference Update="YamlSerializer" Version="1.0.0" />
   </ItemGroup>
 </Project>
